--- a/2020-01/index.html
+++ b/2020-01/index.html
@@ -7,6 +7,7 @@
         @import url("https://fonts.googleapis.com/css?family=Luckiest+Guy");
         /* BODY */
         body {
+            background-image: url("372212.jpg");
             position: absolute;
             top: 0;
             left: 0;
@@ -14,10 +15,10 @@
             bottom: 0;
             width: 100%;
             height: 100%;
-            background-color: skyblue;
-            background-image: -webkit-linear-gradient(90deg, skyblue 0%, steelblue 100%);
-            background-attachment: fixed;
-            background-size: 100% 100%;
+            /*background-color: skyblue;*/
+            /*background-image: -webkit-linear-gradient(90deg, skyblue 0%, steelblue 100%);*/
+            /*background-attachment: fixed;*/
+            /*background-size: 100% 100%;*/
             overflow: hidden;
             font-family: "Luckiest Guy", cursive;
             -webkit-font-smoothing: antialiased;
@@ -49,8 +50,8 @@
         h1 {
             cursor: default;
             position: absolute;
-            top: -100px;
-            left: 0;
+            top: -450px;
+            left: 500px;
             right: 0;
             bottom: 0;
             width: 100%;
@@ -77,59 +78,7 @@
             -webkit-animation-delay: 0.1s;
         }
 
-        /*h1 span:nth-child(2) {*/
-        /*    -webkit-animation-delay: 0.1s;*/
-        /*}*/
-
-        /*h1 span:nth-child(3) {*/
-        /*    -webkit-animation-delay: 0.2s;*/
-        /*}*/
-
-        /*h1 span:nth-child(4) {*/
-        /*    -webkit-animation-delay: 0.3s;*/
-        /*}*/
-
-        /*h1 span:nth-child(5) {*/
-        /*    -webkit-animation-delay: 0.4s;*/
-        /*}*/
-
-        /*h1 span:nth-child(6) {*/
-        /*    -webkit-animation-delay: 0.5s;*/
-        /*}*/
-
-        /*h1 span:nth-child(7) {*/
-        /*    -webkit-animation-delay: 0.6s;*/
-        /*}*/
-
-        /*h1 span:nth-child(8) {*/
-        /*    -webkit-animation-delay: 0.2s;*/
-        /*}*/
-
-        /*h1 span:nth-child(9) {*/
-        /*    -webkit-animation-delay: 0.3s;*/
-        /*}*/
-
-        /*h1 span:nth-child(10) {*/
-        /*    -webkit-animation-delay: 0.4s;*/
-        /*}*/
-
-        /*h1 span:nth-child(11) {*/
-        /*    -webkit-animation-delay: 0.5s;*/
-        /*}*/
-
-        /*h1 span:nth-child(12) {*/
-        /*    -webkit-animation-delay: 0.6s;*/
-        /*}*/
-
-        /*h1 span:nth-child(13) {*/
-        /*    -webkit-animation-delay: 0.7s;*/
-        /*}*/
-
-        /*h1 span:nth-child(14) {*/
-        /*    -webkit-animation-delay: 0.8s;*/
-        /*}*/
-
-        /* ANIMATION */
+             /* ANIMATION */
         @-webkit-keyframes bounce {
             100% {
                 top: -20px;
@@ -137,6 +86,16 @@
                 0 5px 0 #ccc, 0 6px 0 #ccc, 0 7px 0 #ccc, 0 8px 0 #ccc, 0 9px 0 #ccc,
                 0 50px 25px rgba(0, 0, 0, 0.2);
             }
+        }
+
+
+        #grid, #grid td{
+            border: 1px solid #2e62a8;
+
+        }
+
+        #grid td {
+            padding: 16px
         }
 
     </style>
@@ -173,5 +132,38 @@
     <span>o</span>
     <span>!</span>
 </h1>
+
+
+
+<table id="grid">
+</table>
+
+
+
+
 </body>
+
+
+<script>
+
+    const dimension = {x: 16, y: 16}
+    const grid = document.getElementById('grid')
+    const rows = []
+
+    for(let i = 0; i < dimension.x; i++){
+       let row = '<tr>'
+
+        for(let z = 0; z< dimension.y; z++) {
+            row += '<td>' + '' + '</td>'
+        }
+
+        row += '</tr>'
+        rows[i]  = row
+
+    }
+
+    grid.innerHTML = rows.join('')
+
+
+</script>
 </html>
